--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,5 +11,9 @@ repos:
 -   repo: https://github.com/psf/black
     rev: stable
     hooks:
-      - id: black
+    -   id: black
         language_version: python3.8
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 8f9b4931b9a28896fb43edccb23016a7540f5b82
+    hooks:
+    -   id: flake8
