--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[packages]
-
-[dev - packages]
-pytest = "*"
-
 [requires]
 python_version = "3.8"
+
+[packages]
+anytree = "*"
+
+[dev-packages]
+pytest = "*"
